k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sentiment
  labels:
    app: sentiment
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: sentiment
